sandbox-codebase/objects/heymarket__Heymarket_Configuration__c/heymarket__Heymarket_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>For storing Heymarket configurations</description>
    <label>Heymarket Configuration</label>
</CustomObject>