sandbox-codebase/objects/heymarket__Heymarket_Configuration__c/fields/heymarket__Failure_Alerts_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Failure_Alerts_Email_Address__c</fullName>
    <description>It stores the email address for sync failure alerts</description>
    <label>Failure Alerts Email Address</label>
    <type>Email</type>
</CustomField>