sandbox-codebase/objects/heymarket__Heymarket_Configuration__c/fields/heymarket__Sync_Failure_Alerts__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Sync_Failure_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable/Disable email notification for syncing failure states.</description>
    <label>Sync Failure Alerts</label>
    <type>Checkbox</type>
</CustomField>