sandbox-codebase/objects/heymarket__Heymarket_Configuration__c/fields/heymarket__Sync_Timing__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Sync_Timing__c</fullName>
    <label>Sync Timing</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>